--- a/source/index.jade
+++ b/source/index.jade
@@ -3,7 +3,7 @@ html.no-js(xmlns:ng='http://angularjs.org', lang='en')
 head
   meta(charset='utf-8')
   meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')    
-  title Shawn's Angular App Skeleton
+  title Hearthstone Deck DB
   meta(name='description', content='')
   meta(name='viewport', content='width=device-width, initial-scale=1')
   link(rel='apple-touch-icon', href='apple-touch-icon.png')
