--- a/source/partials/footer.jade
+++ b/source/partials/footer.jade
@@ -1,7 +1,7 @@
 footer.text-center.text-danger
     .container
         .row
-          b &copy; 2015 Shawn Scott - {{ Application.Name }}
+          b &copy; 2016 mudzereli - {{ Application.Name }}
           <!--[if gt IE 8]><!-->
           span.dropup.pull-right(dropdown='', on-toggle='toggled(open)', ng-controller='ThemeController')
             button.btn.btn-sm.btn-danger.dropdown-toggle(dropdown-toggle='') Theme Selector
