--- a/source/css/main.less
+++ b/source/css/main.less
@@ -63,25 +63,25 @@ html {
     border: none;
 }
 
-.fg-MAGE    { color: #697194 !important; }
-.fg-PRIEST  { color: #A9B4B4 !important; }
-.fg-WARLOCK { color: #4D3850 !important; }
-.fg-SHAMAN  { color: #33365C !important; }
-.fg-WARRIOR { color: #702124 !important; }
-.fg-DRUID   { color: #5D3B2B !important; }
-.fg-ROGUE   { color: #3F3737 !important; }
-.fg-HUNTER  { color: #325F27 !important; }
-.fg-PALADIN { color: #AC7938 !important; }
+.fg-MAGE    { color: darken(#69CCF0,35%) !important; }
+.fg-PRIEST  { color: darken(#F0F0F0,35%) !important; }
+.fg-WARLOCK { color: darken(#9482C9,35%) !important; }
+.fg-SHAMAN  { color: darken(#0070DE,35%) !important; }
+.fg-WARRIOR { color: darken(#C79C6E,35%) !important; }
+.fg-DRUID   { color: darken(#FF7D0A,35%) !important; }
+.fg-ROGUE   { color: darken(#FFF569,35%) !important; }
+.fg-HUNTER  { color: darken(#ABD473,35%) !important; }
+.fg-PALADIN { color: darken(#F58CBA,35%) !important; }
 
-.bg-MAGE    { color: white !important; background-color: #697194 !important; }
-.bg-PRIEST  { color: white !important; background-color: #A9B4B4 !important; }
-.bg-WARLOCK { color: white !important; background-color: #4D3850 !important; }
-.bg-SHAMAN  { color: white !important; background-color: #33365C !important; }
-.bg-WARRIOR { color: white !important; background-color: #702124 !important; }
-.bg-DRUID   { color: white !important; background-color: #5D3B2B !important; }
-.bg-ROGUE   { color: white !important; background-color: #3F3737 !important; }
-.bg-HUNTER  { color: white !important; background-color: #325F27 !important; }
-.bg-PALADIN { color: white !important; background-color: #AC7938 !important; }
+.bg-MAGE    { background-color: #69CCF0 !important }
+.bg-PRIEST  { background-color: #F0F0F0 !important }
+.bg-WARLOCK { background-color: #9482C9 !important }
+.bg-SHAMAN  { background-color: #0070DE !important }
+.bg-WARRIOR { background-color: #C79C6E !important }
+.bg-DRUID   { background-color: #FF7D0A !important }
+.bg-ROGUE   { background-color: #FFF569 !important }
+.bg-HUNTER  { background-color: #ABD473 !important }
+.bg-PALADIN { background-color: #F58CBA !important }
 
 *.unselectable {
    -moz-user-select: -moz-none;
