--- a/source/views/decks.jade
+++ b/source/views/decks.jade
@@ -1,35 +1,28 @@
 .row
   .col-sm-12
-    .panel.panel-default
+    .panel.panel-success
       .panel-heading
         | Filtered Deck Lists
       .panel-body
         .table-responsive
-          table.table.table-striped.table-condensed
-            thead
-              th Date
-              th Class
-              th Archetype
-              th Player
-              th Event
-              th Card List
-            tbody
-              tr(ng-repeat="deck in FILTERDECKDB | limitTo: 150 track by $index", class="bg-{{ deck.CLASS }}")
-                td {{ deck.DATE | date:"MM/dd/yyyy" }}
-                td {{ deck.CLASS | titleCase }}
-                td {{ deck.ARCHETYPE | titleCase }}
-                td {{ deck.PLAYER | titleCase }}
-                td {{ deck.EVENT | titleCase }}
-                td
-                  span.glyphicon.glyphicon-th-list.pull-right(tooltip="Deck List", style=,"cursor: pointer", ng-click="Application.DeckListShowing[$index] = !Application.DeckListShowing[$index];")
-                  div(ng-show="Application.DeckListShowing[$index]")
-                    br
-                    table.table.table-striped.table-condensed(class="fg-{{ deck.CLASS }}", style="font-size: 0.7em;")
-                      thead
-                        th #
-                        th Card
-                      tbody
-                        tr(ng-repeat="card in deck.CARDLIST")
-                          td(style="padding: 1px; margin: 1px;")
-                            strong {{ card[0] }}
-                          td(style="padding: 1px; margin: 1px;") {{ card[1] }}
+          div(accordion, close-others="oneAtATime")
+            div(accordion-group, is-open="decklist.open", ng-repeat="deck in FILTERDECKDB | limitTo: 150 track by $index", class="panel-default")
+              div(accordion-heading)
+                .row(class="fg-{{ deck.CLASS }}", style="font-size: 0.9em;")
+                  .col-sm-1
+                    img(src="/assets/Icon_{{ deck.CLASS | titleCase }}_64.png", height="26px;", style="margin-top: -10px; margin-bottom: -10px;")
+                  .col-sm-1 {{ deck.DATE | date:"MM/dd" }} 
+                  .col-sm-3 {{ deck.ARCHETYPE | titleCase }} 
+                  .col-sm-2 {{ deck.PLAYER | titleCase }} 
+                  .col-sm-4 {{ deck.EVENT | titleCase }} 
+                  .col-sm-1 
+                    .pull-right.glyphicon(ng-class="{'glyphicon-chevron-down': decklist.open, 'glyphicon-chevron-right': !decklist.open}")
+              table.table.table-striped.table-condensed(style="font-size: 0.7em;")
+                thead
+                  th #
+                  th Card
+                tbody
+                  tr(ng-repeat="card in deck.CARDLIST")
+                    td(style="padding: 1px; margin: 1px;")
+                      strong {{ card[0] }}
+                    td(style="padding: 1px; margin: 1px;") {{ card[1] }}
