--- a/source/partials/navbar.jade
+++ b/source/partials/navbar.jade
@@ -15,7 +15,7 @@
               a(href='#/decks') Deck Lists
             li(ng-class="{active:IsActive('/helper')}")
               a(href='#/helper') Deck Stats
-            li(ng-class="{active:Filters.Showing}", ng-click="Filters.Showing = !Filters.Showing")
-              a(style="cursor: pointer;") 
-                span.text-danger(ng-if="Filters.Showing") Hide Filters
-                span.text-success(ng-if="!Filters.Showing") Show Filters
+            //- li(ng-class="{active:Filters.Showing}", ng-click="Filters.Showing = !Filters.Showing")
+            //-   a(style="cursor: pointer;") 
+            //-     span.text-danger(ng-if="Filters.Showing") Hide Filters
+            //-     span.text-success(ng-if="!Filters.Showing") Show Filters
