--- a/source/index.jade
+++ b/source/index.jade
@@ -75,16 +75,18 @@ head
                     .form-group
                       label Class Filter
                       div(isteven-multi-select, input-model="Classes", output-model="Filters.Classes", button-label="icon", item-label="icon name", tick-property="selected")
-                      br
-                      label Archetype Filter
-                      div(isteven-multi-select, input-model="Archetypes", output-model="Filters.Archetypes", max-labels="3", button-label="name", item-label="icon name countword", tick-property="selected")
+                      // br
                   form.col-sm-3
                     .form-group
-                      label Include Decks With Cards
-                      div(isteven-multi-select, input-model="FilteredDeckCards", output-model="Filters.IncludeDecksWithCards", max-labels="3", button-label="name", item-label="name", tick-property="include")
-                      br
-                      label Exclude Decks With Cards
-                      div(isteven-multi-select, input-model="FilteredDeckCards", output-model="Filters.ExcludeDecksWithCards", max-labels="3", button-label="name", item-label="name", tick-property="exclude")
+                      label Archetype Filter
+                      div(isteven-multi-select, input-model="Archetypes", output-model="Filters.Archetypes", max-labels="3", button-label="name", item-label="icon name countword", tick-property="selected")
+                      //- form.col-sm-3
+                      //-   .form-group
+                      //-     label Include Decks With Cards
+                      //-     div(isteven-multi-select, input-model="FilteredDeckCards", output-model="Filters.IncludeDecksWithCards", max-labels="3", button-label="name", item-label="name", tick-property="include")
+                      //-     br
+                      //-     label Exclude Decks With Cards
+                      //-     div(isteven-multi-select, input-model="FilteredDeckCards", output-model="Filters.ExcludeDecksWithCards", max-labels="3", button-label="name", item-label="name", tick-property="exclude")
                   form.col-sm-3
                     .form-group
                       label Event Filter
