--- a/source/views/decks.jade
+++ b/source/views/decks.jade
@@ -10,7 +10,7 @@
               div(accordion-heading)
                 .row(class="fg-{{ deck.CLASS }}", style="font-size: 0.9em;")
                   .col-sm-1
-                    img(src="/assets/Icon_{{ deck.CLASS | titleCase }}_64.png", height="26px;", style="margin-top: -10px; margin-bottom: -10px;")
+                    img(src="{{ Application.BaseURL }}/assets/Icon_{{ deck.CLASS | titleCase }}_64.png", height="26px;", style="margin-top: -10px; margin-bottom: -10px;")
                   .col-sm-1 {{ deck.DATE | date:"MM/dd" }} 
                   .col-sm-3 {{ deck.ARCHETYPE | titleCase }} 
                   .col-sm-2 {{ deck.PLAYER | titleCase }} 
