--- a/source/css/main.less
+++ b/source/css/main.less
@@ -1,7 +1,7 @@
 /* LESS variables */
 @footer-height: 45;
 @navbar-brand-width: 33; /* percentage */
-@background-url: 'http://www.wallpaperup.com/uploads/wallpapers/2014/04/07/324863/aaa2e8698fb921bdd3f957f19bba408b.jpg';
+@background-url: '';
 
 /* main styling */
 html {
