--- a/source/views/helper.jade
+++ b/source/views/helper.jade
@@ -1,65 +1,86 @@
 .row
-    .col-sm-3
-        .panel.panel-success
-            .panel-heading
-                | Auto-Include Cards
-            table.table.table-striped.table-condensed(style="font-size: 0.8em;")
+  .col-sm-6
+    .panel.panel-primary
+      .panel-heading
+        | Main Cards To Consider
+        .pull-right
+          button.btn.btn-sm.btn-success(ngclipboard, data-clipboard-text="{{GetTextListFromCardGroup(CopyClipboardCards)}}", tooltip="Copy these cards to the Clipboard")
+            span.glyphicon.glyphicon-copy
+        .clearfix
+      .panel-body
+        .row
+          .col-sm-6
+            .panel.panel-success
+                .panel-heading
+                  | Key Cards 
+                  small ({{ GetCardCount(Tier1Cards) }} cards) 
+                table.table.table-striped.table-condensed(style="font-size: 0.8em;")
+                  thead
+                    th Avg#
+                    th Card
+                    th Seen%
+                  tbody
+                    tr(ng-repeat="card in Tier1Cards | limitTo: 30")
+                      td
+                        strong {{ card.TOTALCOUNT / card.SEENCOUNT | number: 1 }}
+                      td
+                        strong {{ card.NAME }}
+                      td {{ card.SEENCOUNT / FILTERDECKDB.length * 100 | number: 1 }}%
+          .col-sm-6
+              .panel.panel-info
+                .panel-heading
+                  | Good Cards 
+                  small ({{ GetCardCount(Tier2Cards) }} cards) 
+                table.table.table-striped.table-condensed(style="font-size: 0.8em;")
+                  thead
+                    th Avg#
+                    th Card
+                    th Seen%
+                  tbody
+                    tr(ng-repeat="card in Tier2Cards | limitTo: 30")
+                      td
+                        strong {{ card.TOTALCOUNT / card.SEENCOUNT | number: 1 }}
+                      td
+                        strong {{ card.NAME }}
+                      td {{ card.SEENCOUNT / FILTERDECKDB.length * 100 | number: 1 }}%
+  
+  .col-sm-6
+    .panel.panel-default
+      .panel-heading
+        | Other Cards To Consider
+      .panel-body
+        .row
+          .col-sm-6
+            .panel.panel-warning
+              .panel-heading
+                | Tech Cards 
+                small ({{ GetCardCount(Tier3Cards) }} cards) 
+              table.table.table-striped.table-condensed(style="font-size: 0.8em;")
                 thead
                   th Avg#
                   th Card
                   th Seen%
                 tbody
-                  tr(ng-repeat="card in DeckHelperCards | limitTo: 30", ng-if="DeckHelperData[card].SEENCOUNT / FILTERDECKDB.length * 100 >= 90")
-                    td
-                      strong {{ DeckHelperData[card].TOTALCOUNT / DeckHelperData[card].SEENCOUNT | number: 1 }}
-                    td
-                      strong {{ card }}
-                    td {{ DeckHelperData[card].SEENCOUNT / FILTERDECKDB.length * 100 | number: 1 }}%
-    .col-sm-3
-        .panel.panel-info
-            .panel-heading
-                | Good Cards
-            table.table.table-striped.table-condensed(style="font-size: 0.8em;")
-                thead
-                  th Avg#
-                  th Card
-                  th Seen%
-                tbody
-                  tr(ng-repeat="card in DeckHelperCards | limitTo: 30", ng-if="DeckHelperData[card].SEENCOUNT / FILTERDECKDB.length * 100 < 90 && DeckHelperData[card].SEENCOUNT / FILTERDECKDB.length * 100 >= 65")
-                    td
-                      strong {{ DeckHelperData[card].TOTALCOUNT / DeckHelperData[card].SEENCOUNT | number: 1 }}
-                    td
-                      strong {{ card }}
-                    td {{ DeckHelperData[card].SEENCOUNT / FILTERDECKDB.length * 100 | number: 1 }}%
-    .col-sm-3
-        .panel.panel-warning
-            .panel-heading
-                | Tech Cards
-            table.table.table-striped.table-condensed(style="font-size: 0.8em;")
-                thead
-                  th Avg#
-                  th Card
-                  th Seen%
-                tbody
-                  tr(ng-repeat="card in DeckHelperCards | limitTo: 30", ng-if="DeckHelperData[card].SEENCOUNT / FILTERDECKDB.length * 100 < 65 && DeckHelperData[card].SEENCOUNT / FILTERDECKDB.length * 100 >= 35")
+                  tr(ng-repeat="card in Tier3Cards | limitTo: 30")
                     td 
-                      strong {{ DeckHelperData[card].TOTALCOUNT / DeckHelperData[card].SEENCOUNT | number: 1 }}
+                      strong {{ card.TOTALCOUNT / card.SEENCOUNT | number: 1 }}
                     td
-                      strong {{ card }}
-                    td {{ DeckHelperData[card].SEENCOUNT / FILTERDECKDB.length * 100 | number: 1 }}%
-    .col-sm-3
-        .panel.panel-danger
-            .panel-heading
-                | Other Cards
-            table.table.table-striped.table-condensed(style="font-size: 0.8em;")
+                      strong {{ card.NAME }}
+                      td {{ card.SEENCOUNT / FILTERDECKDB.length * 100 | number: 1 }}%
+          .col-sm-6
+            .panel.panel-danger
+              .panel-heading
+                | Other Cards 
+                small ({{ GetCardCount(Tier4Cards) }} cards) 
+              table.table.table-striped.table-condensed(style="font-size: 0.8em;")
                 thead
                   th Avg#
                   th Card
                   th Seen%
                 tbody
-                  tr(ng-repeat="card in DeckHelperCards | limitTo: 30", ng-if="DeckHelperData[card].SEENCOUNT / FILTERDECKDB.length * 100 < 35")
+                  tr(ng-repeat="card in Tier4Cards | limitTo: 30")
                     td 
-                      strong {{ DeckHelperData[card].TOTALCOUNT / DeckHelperData[card].SEENCOUNT | number: 1 }}
+                      strong {{ card.TOTALCOUNT / card.SEENCOUNT | number: 1 }}
                     td
-                      strong {{ card }}
-                    td {{ DeckHelperData[card].SEENCOUNT / FILTERDECKDB.length * 100 | number: 1 }}%
+                      strong {{ card.NAME }}
+                    td {{ card.SEENCOUNT / FILTERDECKDB.length * 100 | number: 1 }}%
