--- a/source/index.jade
+++ b/source/index.jade
@@ -18,6 +18,14 @@ head
   // Javascript libraries
   //script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js')
   //script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/js/bootstrap.min.js')
+  script.
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-88411478-1', 'auto');
+    ga('send', 'pageview');
+
   script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.js')
   script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js')
   script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.28/angular.min.js')
