--- a/source/index.jade
+++ b/source/index.jade
@@ -37,8 +37,9 @@ head
   script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/angular-multi-select/4.0.0/isteven-multi-select.min.js')
   script(type='text/javascript', src="//cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.15/clipboard.min.js")
   script(type='text/javascript', src='ngclipboard-dist/ngclipboard.min.js')
+  script(type='text/javascript', src='hearthstonejson-dist/carddb.js')
   // Grunt Generated Javascript
-  script(type='text/javascript', src='javascript.min.js?120320161')
+  script(type='text/javascript', src='javascript.min.js?12042016')
   body#ng-app(ng-app='AngularApp', ng-controller='AppController')
     // Non-Footer Content
     .wrapper
