--- a/source/views/helper.jade
+++ b/source/views/helper.jade
@@ -20,11 +20,12 @@
                     th Card
                     th Seen%
                   tbody
-                    tr(ng-repeat="card in Tier1Cards | limitTo: 30")
+                    tr(ng-repeat="card in Tier1Cards | limitTo: 30", style="cursor: help;", tooltip-placement="right", tooltip-append-to-body="true", tooltip-html-unsafe="<img src='{{ GetCardImage(card.NAME) }}' style='height: 280px;'><div class='clearfix'></div>") 
                       td
                         strong {{ card.TOTALCOUNT / card.SEENCOUNT | number: 1 }}
                       td
-                        strong {{ card.NAME }}
+                        strong
+                          | {{ card.NAME }}
                       td {{ card.SEENCOUNT / FILTERDECKDB.length * 100 | number: 1 }}%
           .col-sm-6
               .panel.panel-info
@@ -37,11 +38,12 @@
                     th Card
                     th Seen%
                   tbody
-                    tr(ng-repeat="card in Tier2Cards | limitTo: 30")
+                    tr(ng-repeat="card in Tier2Cards | limitTo: 30", style="cursor: help;", tooltip-placement="right", tooltip-append-to-body="true", tooltip-html-unsafe="<img src='{{ GetCardImage(card.NAME) }}' style='height: 280px;'><div class='clearfix'></div>")
                       td
                         strong {{ card.TOTALCOUNT / card.SEENCOUNT | number: 1 }}
                       td
-                        strong {{ card.NAME }}
+                        strong
+                          | {{ card.NAME }}
                       td {{ card.SEENCOUNT / FILTERDECKDB.length * 100 | number: 1 }}%
   
   .col-sm-6
@@ -61,11 +63,12 @@
                   th Card
                   th Seen%
                 tbody
-                  tr(ng-repeat="card in Tier3Cards | limitTo: 30")
+                  tr(ng-repeat="card in Tier3Cards | limitTo: 30", style="cursor: help;", tooltip-placement="right", tooltip-append-to-body="true", tooltip-html-unsafe="<img src='{{ GetCardImage(card.NAME) }}' style='height: 280px;'><div class='clearfix'></div>")
                     td 
                       strong {{ card.TOTALCOUNT / card.SEENCOUNT | number: 1 }}
                     td
-                      strong {{ card.NAME }}
+                      strong
+                        | {{ card.NAME }}
                       td {{ card.SEENCOUNT / FILTERDECKDB.length * 100 | number: 1 }}%
           .col-sm-6
             .panel.panel-danger
@@ -78,9 +81,10 @@
                   th Card
                   th Seen%
                 tbody
-                  tr(ng-repeat="card in Tier4Cards | limitTo: 30")
+                  tr(ng-repeat="card in Tier4Cards | limitTo: 30", style="cursor: help;", tooltip-placement="left", tooltip-append-to-body="true", tooltip-html-unsafe="<img src='{{ GetCardImage(card.NAME) }}' style='height: 280px;'><div class='clearfix'></div>")
                     td 
                       strong {{ card.TOTALCOUNT / card.SEENCOUNT | number: 1 }}
                     td
-                      strong {{ card.NAME }}
+                      strong
+                        | {{ card.NAME }}
                     td {{ card.SEENCOUNT / FILTERDECKDB.length * 100 | number: 1 }}%
