--- a/source/index.jade
+++ b/source/index.jade
@@ -1,45 +1,20 @@
 doctype html
 html.no-js(xmlns:ng='http://angularjs.org', lang='en')
-head
-  meta(charset='utf-8')
-  meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')    
-  title Hearthstone Deck DB
-  meta(name='description', content='')
-  meta(name='viewport', content='width=device-width, initial-scale=1')
-  link(rel='apple-touch-icon', href='apple-touch-icon.png')
-  // CSS libraries
-  link(rel='stylesheet', type='text/css', href='//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css')
-  link(rel='stylesheet', type='text/css', href='//cdnjs.cloudflare.com/ajax/libs/angular-multi-select/4.0.0/isteven-multi-select.min.css')
-  <!--[if lte IE 8]>
-  link(rel='stylesheet', type='text/css', href='bootstrap-3.3.4-dist/css/bootstrap.min.css')
-  <![endif]-->
-  // Grunt Generated CSS
-  link(rel='stylesheet', type='text/css', href='stylesheet.min.css')
-  // Javascript libraries
-  //script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js')
-  //script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/js/bootstrap.min.js')
-  script.
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-88411478-1', 'auto');
-    ga('send', 'pageview');
-
-  script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.js')
-  script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js')
-  script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.28/angular.min.js')
-  script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.28/angular-route.min.js')
-  script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.12.1/ui-bootstrap-tpls.min.js')
-  script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/angular-css/1.0.7/angular-css.js')
-  script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/angular-local-storage/0.1.5/angular-local-storage.min.js')
-  script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/angular-google-chart/0.1.0/ng-google-chart.min.js')
-  script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/angular-multi-select/4.0.0/isteven-multi-select.min.js')
-  script(type='text/javascript', src="//cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.15/clipboard.min.js")
-  script(type='text/javascript', src='ngclipboard-dist/ngclipboard.min.js')
-  script(type='text/javascript', src='hearthstonejson-dist/carddb.js')
-  // Grunt Generated Javascript
-  script(type='text/javascript', src='javascript.min.js?12042016')
+  head
+    meta(charset='utf-8')
+    meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')    
+    title Hearthstone Deck DB
+    meta(name='description', content='')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
+    link(rel='apple-touch-icon', href='apple-touch-icon.png')
+    // CSS libraries
+    link(rel='stylesheet', type='text/css', href='//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css')
+    link(rel='stylesheet', type='text/css', href='//cdnjs.cloudflare.com/ajax/libs/angular-multi-select/4.0.0/isteven-multi-select.min.css')
+    <!--[if lte IE 8]>
+    link(rel='stylesheet', type='text/css', href='bootstrap-3.3.4-dist/css/bootstrap.min.css')
+    <![endif]-->
+    // Grunt Generated CSS
+    link(rel='stylesheet', type='text/css', href='stylesheet.min.css')
   body#ng-app(ng-app='AngularApp', ng-controller='AppController')
     // Non-Footer Content
     .wrapper
@@ -107,3 +82,25 @@ head
       .push
     // Footer
     div(ng-include='', src="'partials/footer.html'")
+  script.
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-88411478-1', 'auto');
+    ga('send', 'pageview');
+  script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.js')
+  script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js')
+  script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.28/angular.min.js')
+  script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.28/angular-route.min.js')
+  script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.12.1/ui-bootstrap-tpls.min.js')
+  script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/angular-css/1.0.7/angular-css.js')
+  script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/angular-local-storage/0.1.5/angular-local-storage.min.js')
+  script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/angular-google-chart/0.1.0/ng-google-chart.min.js')
+  script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/angular-multi-select/4.0.0/isteven-multi-select.min.js')
+  script(type='text/javascript', src="//cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.15/clipboard.min.js")
+  script(type='text/javascript', src='ngclipboard-dist/ngclipboard.min.js')
+  script(type='text/javascript', src='hearthstonejson-dist/carddb.js')
+  script(type='text/javascript', src='deckdb-dist/deckdb.js?12042016')
+  script(type='text/javascript', src='javascript.min.js')
+  // Grunt Generated Javascript
