--- a/source/index.jade
+++ b/source/index.jade
@@ -101,6 +101,6 @@ html.no-js(xmlns:ng='http://angularjs.org', lang='en')
   script(type='text/javascript', src="//cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.15/clipboard.min.js")
   script(type='text/javascript', src='ngclipboard-dist/ngclipboard.min.js')
   script(type='text/javascript', src='hearthstonejson-dist/carddb.js')
-  script(type='text/javascript', src='deckdb-dist/deckdb.js?12042016')
+  script(type='text/javascript', src='deckdb-dist/deckdb.js')
   script(type='text/javascript', src='javascript.min.js')
   // Grunt Generated Javascript
