--- a/source/views/main.jade
+++ b/source/views/main.jade
@@ -81,7 +81,7 @@
                         th #
                         th Card
                       tbody
-                        tr(ng-repeat="card in Application.CurrentlySelectedDeck.CARDLIST", style="cursor: help;", tooltip-placement="left", tooltip-append-to-body="true", tooltip-html-unsafe="<img src='{{ GetCardImage(card[1]) }}' style='width: 150px;'><div class='clearfix'></div>")
+                        tr(ng-repeat="card in Application.CurrentlySelectedDeck.CARDLIST", style="cursor: help;", tooltip-placement="left", tooltip-append-to-body="true", tooltip-html-unsafe="<img src='{{ GetCardImage(card[1]) }}' width='150px' height='227px'><div class='clearfix'></div>")
                           td(style="padding: 1px; margin: 1px;")
                             strong {{ card[0] }}
                           td(style="padding: 1px; margin: 1px;") 
